--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
 
 # production
 /build
-/dist
 
 # misc
 .DS_Store
-.vscode
 .env.local
 .env.development.local
 .env.test.local
@@ -18,4 +18,3 @@
 
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
