--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,26 +4,21 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.17.0",
+    "@babel/preset-env": "^7.22.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
-    "bootstrap": "^5.3.1",
-    "formik": "^2.4.4",
+    "bootstrap": "^5.2.2",
+    "formik": "^2.2.9",
     "i18next": "^23.5.1",
-    "leo-profanity": "^1.7.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^9.1.3",
-    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4",
-    "yup": "^1.2.0"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,12 +45,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.49.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-functional": "^6.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
