--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,21 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
-    "@babel/preset-env": "^7.22.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.2",
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
-    "i18next": "^23.5.1",
+    "i18next": "^21.9.1",
+    "leo-profanity": "^1.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.2.2",
-    "react-router-dom": "^6.4.1",
-    "react-scripts": "^5.0.1",
+    "react-i18next": "^11.18.5",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
+    "socket.io-client": "^4.5.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -25,12 +27,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -45,6 +41,13 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-functional": "^4.2.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.1",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
