--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -1,14 +1,11 @@
-# Линтер подключаем именно в папку, созданную create-react-app
-# Все зависимости линтера должны быть установлены на этом уровне,
-# а не в корне проекта
-# Не забудьте удалить ключ eslintConfig из package.json,
-# автоматический созданный при запуске CRA
 env:
   browser: true
   es2021: true
+  jest: true
 
 extends:
   - airbnb
+  - plugin:react/recommended
   - plugin:functional/recommended
   - plugin:react-hooks/recommended
 
@@ -38,4 +35,3 @@ rules:
   react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
   testing-library/no-debug: 0
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
-  jsx-a11y/label-has-associated-control: 0
