--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "homepage": "https://github.com/imikh1991/frontend-project-12#readme",
   "dependencies": {
     "@babel/preset-env": "^7.22.1",
-    "@hexlet/chat-server": "^1.1.8",
-    "@railway/cli": "^3.4.0"
+    "@hexlet/chat-server": "^1.1.8"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
